# internal/application/handler/auth.go
@@ -18,6 +18,16 @@ func NewAuthHandler(authService interfaces.AuthService) interfaces.AuthHandler {
 	}
 }
 
+// @Summary Send OTP
+// @Description Send OTP
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param fields body dto.FieldAuthSendOTP true "Fields"
+// @Success 200 {array} dto.responseOneMessage
+// @Failure 400 {object} dto.responseOneMessage
+// @Failure 403 {object} dto.responseOneMessage
+// @Router /auth/send-otp [post]
 func (ah *authHandler) SendOTP(ctx *fiber.Ctx) error {
 	var fields dto.FieldAuthSendOTP
 	ctx.BodyParser(&fields)
@@ -30,6 +40,15 @@ func (ah *authHandler) SendOTP(ctx *fiber.Ctx) error {
 	return ctx.Status(statusCode).JSON(response)
 }
 
+// @Summary Verify OTP
+// @Description Verify OTP & Login or Register user
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param fields body dto.FieldAuthVerifyOTP true "Fields"
+// @Success 200 {array} dto.ResponseAuthOk
+// @Failure 401 {object} dto.responseOneMessage
+// @Router /auth/verify-otp [post]
 func (ah *authHandler) VerifyOTP(ctx *fiber.Ctx) error {
 	var fields dto.FieldAuthVerifyOTP
 	ctx.BodyParser(&fields)
@@ -41,6 +60,15 @@ func (ah *authHandler) VerifyOTP(ctx *fiber.Ctx) error {
 	return ctx.JSON(response)
 }
 
+// @Summary Refresh Token
+// @Description Refresh Token
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param fields body dto.FieldRefreshToken true "Fields"
+// @Success 200 {array} dto.ResponseAuthOk
+// @Failure 401 {object} dto.responseOneMessage
+// @Router /auth/refresh-token [post]
 func (ah *authHandler) RefreshToken(ctx *fiber.Ctx) error {
 	var fields dto.FieldRefreshToken
 	ctx.BodyParser(&fields)
